# concert-db

./: .gitignore  README.md  Taskfile.yaml  add_sample_data.py  pyproject.toml
concert_db/: app.py  app.tcss  models.py  settings.py  types.py
concert_db/settings/: __init__.py  db_config.py
concert_db/ui/: __init__.py  add_artist.py  add_venue.py  artist.py  concert.py  shared.py  sorting.py  venue.py
scripts/: add_sample_data.py  db_shell.py
tests/: conftest.py  test_artists.py  test_concerts.py  test_models.py  test_shared.py  test_sorting.py  test_venues.py  utils.py
