[project]
name = "concert-db"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ruff>=0.13.1",
    "sqlalchemy>=2.0.43",
    "textual>=6.1.0",
]
[dependency-groups]
dev = [
    "ipython>=9.5.0",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-env>=1.1.5",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["SIM", "I", "ARG", "E", "W", "F", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.pytest_env]
ENVIRONMENT = "test"

[tool.pyrefly]
project-includes = ["**/*"]
project-excludes = [
    "**/node_modules",
    "**/__pycache__",
    "**/*venv/**/*",
]
