[project]
name = "concert-db"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ruff>=0.13.1",
    "sqlalchemy>=2.0.43",
    "textual>=6.1.0",
]
[dependency-groups]
dev = [
    "ipython>=9.5.0",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-env>=1.1.5",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["SIM", "I", "ARG", "E", "W", "F", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pytest_env]
ENVIRONMENT = "test"

[tool.mypy]
# Basic configuration
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

# Strictness settings
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true

# Error output
show_error_codes = true
show_column_numbers = true
pretty = true
color_output = true

# Import discovery
namespace_packages = true
explicit_package_bases = true

# Files to check
files = [
    "concert_db",
    "tests",
]

# Third-party library stubs
[[tool.mypy.overrides]]
module = [
    "textual.*",
    "sqlalchemy.*",
]
ignore_missing_imports = true

# Test-specific overrides
[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = ["method-assign"]
